{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 184,
  "lineage": "914c3d91-3d78-189b-0eee-f47d23023945",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer/frontendIPConfigurations/frontend",
                "name": "frontend",
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/virtualNetworks/vnet/subnets/db-subnet"
              }
            ],
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer",
            "location": "westeurope",
            "name": "db-loadbalancer",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "elli-test1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.network.azurerm_subnet.db",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer/backendAddressPools/db-backend-pool",
            "loadbalancer_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer",
            "name": "db-backend-pool"
          },
          "dependencies": [
            "module.load_balancer.azurerm_lb.main",
            "module.network.azurerm_subnet.db",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer/probes/db-health-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer",
            "name": "db-health-probe",
            "number_of_probes": 2,
            "port": 5432,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.load_balancer.azurerm_lb.main",
            "module.network.azurerm_subnet.db",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer/backendAddressPools/db-backend-pool"
            ],
            "backend_port": 5432,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer/frontendIPConfigurations/frontend",
            "frontend_ip_configuration_name": "frontend",
            "frontend_port": 5432,
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer/loadBalancingRules/db-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer",
            "name": "db-lb-rule",
            "probe_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer/probes/db-health-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.load_balancer.azurerm_lb.main",
            "module.load_balancer.azurerm_lb_backend_address_pool.main",
            "module.load_balancer.azurerm_lb_probe.main",
            "module.network.azurerm_subnet.db",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer/backendAddressPools/db-backend-pool",
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/networkInterfaces/db1-nic/ipConfigurations/db1-ip-config|/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer/backendAddressPools/db-backend-pool",
            "ip_configuration_name": "db1-ip-config",
            "network_interface_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/networkInterfaces/db1-nic"
          },
          "dependencies": [
            "module.load_balancer.azurerm_lb.main",
            "module.load_balancer.azurerm_lb_backend_address_pool.main",
            "module.network.azurerm_network_interface.db1",
            "module.network.azurerm_public_ip.db1",
            "module.network.azurerm_subnet.db",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer/backendAddressPools/db-backend-pool",
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/networkInterfaces/db2-nic/ipConfigurations/db2-ip-config|/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/loadBalancers/db-loadbalancer/backendAddressPools/db-backend-pool",
            "ip_configuration_name": "db2-ip-config",
            "network_interface_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/networkInterfaces/db2-nic"
          },
          "dependencies": [
            "module.load_balancer.azurerm_lb.main",
            "module.load_balancer.azurerm_lb_backend_address_pool.main",
            "module.network.azurerm_network_interface.db2",
            "module.network.azurerm_public_ip.db2",
            "module.network.azurerm_subnet.db",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/networkInterfaces/db1-nic",
            "internal_domain_name_suffix": "vxpma0qrcyaebbtkh5ukqq2m1d.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "db1-ip-config",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/publicIPAddresses/db1-public-ip",
                "subnet_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/virtualNetworks/vnet/subnets/db-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "db1-nic",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "elli-test1"
          },
          "dependencies": [
            "module.network.azurerm_public_ip.db1",
            "module.network.azurerm_subnet.db",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/networkInterfaces/db2-nic",
            "internal_domain_name_suffix": "vxpma0qrcyaebbtkh5ukqq2m1d.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "db2-ip-config",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/publicIPAddresses/lb-public-ip",
                "subnet_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/virtualNetworks/vnet/subnets/db-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "db2-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "elli-test1"
          },
          "dependencies": [
            "module.network.azurerm_public_ip.db2",
            "module.network.azurerm_subnet.db",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/networkInterfaces/web",
            "internal_domain_name_suffix": "vxpma0qrcyaebbtkh5ukqq2m1d.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/publicIPAddresses/web-nic-public-ip",
                "subnet_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/virtualNetworks/vnet/subnets/web-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "web",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "elli-test1"
          },
          "dependencies": [
            "module.network.azurerm_public_ip.web_nic",
            "module.network.azurerm_subnet.web",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "westeurope",
            "name": "db-nsg",
            "resource_group_name": "elli-test1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowPostgreSQL",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "westeurope",
            "name": "web-nsg",
            "resource_group_name": "elli-test1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "all",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/publicIPAddresses/db1-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.174.3.217",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "db1-public-ip",
            "resource_group_name": "elli-test1",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/publicIPAddresses/lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.166.110.210",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "lb-public-ip",
            "resource_group_name": "elli-test1",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/publicIPAddresses/web-nic-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.166.108.141",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "web-nic-public-ip",
            "resource_group_name": "elli-test1",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/virtualNetworks/vnet/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "elli-test1",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/virtualNetworks/vnet/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "elli-test1",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/virtualNetworks/vnet/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/virtualNetworks/vnet/subnets/db-subnet"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.db_nsg",
            "module.network.azurerm_subnet.db",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/virtualNetworks/vnet/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/virtualNetworks/vnet/subnets/web-subnet"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.web_nsg",
            "module.network.azurerm_subnet.web",
            "module.network.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6ac0dead-1611-4000-866a-3fe8a8438cdb",
            "id": "/subscriptions/89fff956-c969-418e-aee9-1c6424ecbb1c/resourceGroups/elli-test1/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "westeurope",
            "name": "vnet",
            "resource_group_name": "elli-test1"
          }
        }
      ]
    }
  ]
}